[package]
name = "fuckingparticles"
version = "0.1.0"
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", rev = "62e4e59a864a3d2ca01e0372cb2f0ffed0d2dbf6", features = ["dynamic"] }
color-eyre = "0.5.11"
itertools = "0.10.1"
linfa = { git = "https://github.com/rust-ml/linfa.git" }
linfa-clustering = { git = "https://github.com/rust-ml/linfa.git" }
ndarray = { version = "0.15.3", features = ["blas"] }
blas-src = { version = "0.8", features = ["openblas"] }
openblas-src = { version = "0.10", features = ["cblas", "static"] }
ndarray-linalg = { version = "0.14.1", features = ["openblas-static"] }
ndarray-rand = "0.14.0"
ndarray-stats = "0.5.0"
palette = "0.6.0"
simple_logger = "1.13.0"
